--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build  && mv build docs",
+    "build": "react-scripts build  && mv build docs && mv docs/static/js docs/",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
