--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build  && mv build docs && mv docs/static/js docs/",
+    "build": "react-scripts build  && mv build docs",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://yutse.github.io/graphql-example"
 }
