creat react app v2

--- a/package.json
+++ b/package.json
@@ -3,20 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.20",
+    "apollo-boost": "^0.1.21",
     "apollo-link-http": "^1.5.5",
-    "graphql": "^0.13.2",
+    "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
-    "react": "^16.4.1",
-    "react-apollo": "^2.2.4",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react": "^16.6.3",
+    "react-apollo": "^2.3.1",
+    "react-dom": "^16.6.3",
+    "react-scripts": "2.1.1",
+    "react-sortable-hoc": "^0.8.3",
+    "styled-components": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build  && mv build docs",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "homepage": "https://yutse.github.io/graphql-example"
 }
